<resources>
    <string name="app_name">ScanEat</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="remember_cb">Recordar</string>
    <string name="login">Entrar</string>
    <string name="signup">Registrarse</string>
    <string name="login_facebook">Entrar con facebook</string>
    <string name="login_googleplus">Entrar con google+</string>
    <string name="field_empty">Este campo no puede estar vacío</string>
    <string name="password_incorrect_digit">La contraseña debe contener mínimo un dígito</string>
    <string name="password_incorrect_lower">La contraseña debe contener mínimo una minúscula</string>
    <string name="password_incorrect_upper">La contraseña debe contener mínimo una mayúscula</string>
    <string name="password_incorrect_length">La contraseña debe contener al menos 8 caractéres</string>
    <string name="login_correct">correcto</string>
    <string name="email">Correo electrónico</string>
    <string name="confirmPasswd">Confirmar contraseña</string>
    <string name="termsNconditions">Aceptar condiciones de uso y servicio</string>
    <string name="address">Dirección</string>


    <string name="radius">Radio: %1$d</string>
    <string name="passsword_not_equal">Las contraseñas no coinciden</string>
    <string name="email_incorrect">El correo electrónico no es válido</string>
    <string name="dishes">Platos</string>
    <string name="restaurants">Restaurantes</string>
    <string name="search">Buscar</string>
    <string name="ubication">Ubicación</string>
    <string name="keyword">Palabra clave</string>
    <string name="search_text">Busque los mejores platos</string>
    <string name="filters">Filtros</string>
    <string name="menuitem_favouritedishes">Platos favoritos</string>
    <string name="user_preferences">Preferencias de usuario</string>
    <string name="general_settings">Configuración general</string>
    <string name="about">Sobre ScanEat</string>
    <string name="about_body">Scan eat \n version 0.1 still in development \n developed by Andrés Espino López</string>
    <string name="rate">Valorar</string>
    <string name="presentation">Presentación</string>
    <string name="quality_price">Calidad/precio</string>
    <string name="ingredients">Ingredientes</string>
</resources>
