<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_image"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        android:id="@+id/login_txiUser">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_txiUser"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:errorTextAppearance="@style/error_appearance"
        app:hintTextAppearance="@style/hint_appearance"
        app:counterTextAppearance="@style/counter_appearance"
        android:id="@+id/login_txiPassword">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/remember_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_txiPassword"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/login_cbRemember" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_cbRemember"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/app_buttondark"
        android:textColor="@color/white"
        android:id="@+id/login_btnLogin" />

    <Button
        android:text="@string/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/app_buttondark"
        android:textColor="@color/white"
        android:id="@+id/login_btnSignUp" />


    <Button
        android:text="@string/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_btnfacebook"
        android:id="@+id/login_btnlogin_facebook"
        />

    <Button
        android:text="@string/login_googleplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btnlogin_facebook"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_btnlogin_googleplus"
        />

</RelativeLayout>