<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance"
            android:id="@+id/signup_txi_username">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_txi_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance"
            android:id="@+id/signup_txi_address">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txi_address"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance"
            android:id="@+id/signup_txi_email">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txi_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance"
            android:id="@+id/signup_txi_passwd">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txi_passwd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance"
            android:id="@+id/signup_txi_confirmPasswd">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirmPasswd" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/signup_txi_confirmPasswd"
            android:text="@string/radius"
            android:textSize="@dimen/text_big"
            android:id="@+id/signup_txv_radius"/>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/signup_txv_radius"
            android:layout_below="@id/signup_txi_confirmPasswd"
            android:id="@+id/signup_seekBar"
            android:progress="1"
            android:max="49"/>

        <CheckBox
            android:text="@string/termsNconditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_txv_radius"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:id="@+id/signup_cb_termsNconditions" />

        <Button
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/app_buttondark"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/signup_cb_termsNconditions"
            android:layout_centerHorizontal="true"
            android:id="@+id/signup_btn_signup"
            android:textColor="@color/white"
            />


    </RelativeLayout>

</ScrollView>