<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/search_txv_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/app_toolbar"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/search_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_big" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/search_txi_ubication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/search_txv_find"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ubication" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/search_txi_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/search_txi_ubication"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/hint_appearance">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/keyword" />
        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/search_spn_cuisine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/search_txi_keyword"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:id="@+id/search_linearlayout_cbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/search_spn_cuisine"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/search_cb_dish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/dishes" />

            <CheckBox
                android:id="@+id/search_cb_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/restaurants" />
        </LinearLayout>

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/search_linearlayout_cbs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/app_buttondark"
            android:text="@string/search"
            android:textColor="@color/white" />


    </RelativeLayout>
</ScrollView>